2004/07/09 Morgan Christiansson <drftpd@mog.se>
* Refactored source to use GlobalContext class,
  which will improve navigation and ease of implementing testcases.
* Removed _self var from SlaveManagerImpl, breaking FileListConverter.
* Moved net.sf.drftpd.master.command.plugins.IRC to
  org.drftpd.commands.SiteBotManagment
* Added SITE IRC RAW command for sending RAW IRC commands.

2004/07/09 Matthew Zimmerman <zubov@users.sourceforge.net>
* Fixed JUnit tests, all pass
* Implemented "site listjobs" to show transfer status on jobs that are 
  currently transferring

2004/07/08 Matthew Zimmerman <zubov@users.sourceforge.net>
* Changes in JobManager to check for deleted files in the job queue
* Fixed small bug in ConstantMirroring
* Implemented GenericTextOutput irc plugin instead of Affils and Bnc
  checkout conf/generictextoutput.conf.dist

2004/07/07 Matthew Zimmerman <zubov@users.sourceforge.net>
* Integrated "site give" and "site take" with FtpConfig so give and take permissions
  can be defined in perms.conf
* Fixed the double announce error with the sitebot
* Refactored JobManager and SlaveTransfer's and added functionality that will result
  in better error control and output

2004/07/04 Matthew Zimmerman <zubov@users.sourceforge.net>
* Slightly refactored ArchiveType's
* site archive command now takes, Properties parameters
  try "site archive" for help
* Implemented ConstantMirroring which will keep X # of copies of files 
  at all times

2004/07/01 Matthew Zimmerman <zubov@users.sourceforge.net>
* Implemented SITE GRPREN <oldgroup> <newgroup>
* Heavily refactored UserManager(s), UserManager is now an abstract class
* Refactoring on User and AbstractUser also

2004/06/30 Morgan Christiansson <drftpd@mog.se>
* Now using AddAsciiOutputStream on controlconnection so that a single \n
  will never appear alone which is not what the FTP RFC says and breaks
  RaidenFTPD.

2004/06/29 Morgan Christiansson <drftpd@mog.se>
* Added ListUtils to "ant slavejar" target.
